# demo-ai-assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_up_tables.sql  streamlit_app.py
.streamlit/: config.toml
dbt/: README.md  dbt_project.yml  profiles.yml  snowflake_setup.sql
dbt/models/: schema.yml  streamlit_docs_pages_chunks.py  streamlit_docstrings_chunks.py
pipeline/: README.md  pyproject.toml  snowflake_setup.sql
snowflake/: environment.yml  initial_setup.sql  populate_st_assistant_data.ipynb
