[project]
name = "ai-assistant"
version = "0.1.0"
description = "A documentation chatbot for Streamlit"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "htbuilder>=0.9.0",
    "snowflake>=1.7.0",
    "snowflake-ml-python==1.9",
    "snowflake-snowpark-python>=1.37.0",
    "streamlit>=1.49.0",
]
